--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,8 @@
 
   <title>alot_mobiledevelopment</title>
   <link rel="manifest" href="manifest.json">
+  <meta name="google-maps-api-key" content="AIzaSyDILjowb0kfxT4cVlLY4ubqbu0El3DRMJk">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDILjowb0kfxT4cVlLY4ubqbu0El3DRMJk"></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
